* Htmlencode for company list * phpdoc

--- a/core/config/phpdoc.ini
+++ b/core/config/phpdoc.ini
@@ -85,7 +85,7 @@ directory = /var/www/websites/todoyu2
 ;; legal values: any wildcard strings separated by commas
 ;; remember, this pathing is RELATIVE to the top-most directory in your "directory" value
 ;ignore = path/to/ignore*,*list.php,myfile.php,subdirectory/
-ignore = __dev/,__locale/,assets/,cache/,doc/,files/,install/,lib/,tests/,update/,view/,test*.php
+ignore = cache/,doc/,files/,install/,lib/,tests/,update/,view/,test*.php
 
 ;; comma-separated list of Converters to use in outputformat:Convertername:templatedirectory format
 ;; legal values: HTML:frames:default,HTML:frames:l0l33t,HTML:frames:phpdoc.de,HTML:frames:phphtmllib,
