--- a/core/config/phpdoc.ini
+++ b/core/config/phpdoc.ini
@@ -16,7 +16,7 @@
 [Parse Data]
 ;; title of all the documentation
 ;; legal values: any string
-title = Todoyu 2.0 API Documentation
+title = Todoyu API Documentation
 
 ;; parse files that start with a . like .bash_profile
 ;; legal values: true, false
@@ -53,7 +53,7 @@ defaultpackagename = Todoyu
 ;; where should the documentation be written?
 ;; legal values: a legal path
 ;target = /home/cellog/output
-target = /var/www/websites/todoyu2/doc/phpdoc
+target = /var/www/websites/todoyu2/doc/phpDoc
 
 ;; Which files should be parsed out as special documentation files, such as README,
 ;; INSTALL and CHANGELOG?  This overrides the default files found in
@@ -62,7 +62,7 @@ readmeinstallchangelog = README, LICENSE, ChangeLog
 
 ;; limit output to the specified packages, even if others are parsed
 ;; legal values: package names separated by commas
-;packageoutput = package1,package2
+packageoutput = Todoyu
 
 ;; comma-separated list of files to parse
 ;; legal values: paths separated by commas
