--- a/.htaccess
+++ b/.htaccess
@@ -32,3 +32,6 @@ RedirectMatch 403 /\\.svn(/|$)
 # Disallow any log file viewing from web
 RedirectMatch 403 (.*)\.log$
 
+# Force php5 (instead 4)
+AddType application/x-httpd-php5 .php
+AddHandler application/x-httpd-php5 .php
