--- a/.htaccess
+++ b/.htaccess
@@ -32,5 +32,8 @@ RedirectMatch 403 /\\.svn(/|$)
 # Disallow any log file viewing from web
 RedirectMatch 403 (.*)\.log$
 
+# Disallow any file download from web
+RedirectMatch 403 /files/*
+
 # Force php5 (instead 4)
 AddType application/x-httpd-php5 .php
