--- a/.htaccess
+++ b/.htaccess
@@ -17,9 +17,11 @@ ExpiresByType application/x-javascript "access plus 1 week"
 # dont add ETag statenent into response of file based documents:
 FileETag none
 
+<IfModule mod_deflate.c>
 # compress text/ html/ xml/ javascript / json output:
 AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript application/json
 # Header append Vary Accept-Encoding
+</IfModule>
 
 DirectoryIndex index.html index.php
 
