--- a/.htaccess
+++ b/.htaccess
@@ -43,6 +43,9 @@ RedirectMatch 403 /files/*
 # Disallow any backup file download from web
 RedirectMatch 403 /backup/*
 
+# Disallow any log file download from web
+RedirectMatch 403 /log/*
+
 # Disallow file download from cache
 RedirectMatch 403 /cache/language/*
 RedirectMatch 403 /cache/tmpl/*
