--- a/.htaccess
+++ b/.htaccess
@@ -41,23 +41,23 @@ RedirectMatch 403 (.*)\.phpsh$
 RedirectMatch 403 /files/*
 
 # Disallow any backup file download from web
-RedirectMatch 403 /backup/*
+RedirectMatch 403 /backup/(.*)
 
 # Disallow any log file download from web
-RedirectMatch 403 /log/*
+RedirectMatch 403 /log/(.*)
 
 # Disallow file download from cache
-RedirectMatch 403 /cache/language/*
-RedirectMatch 403 /cache/tmpl/*
+RedirectMatch 403 /cache/language/(.*)
+RedirectMatch 403 /cache/tmpl/(.*)
 
 # Disallow any direct file access (in extensions)
-#RedirectMatch 403 /config\/*/
-RedirectMatch 403 /controller\/*/
-RedirectMatch 403 /model\/*/
-RedirectMatch 403 /dwoo\/*/
-RedirectMatch 403 /locale\/*/
-RedirectMatch 403 /tests\/*/
-RedirectMatch 403 /view\/*/
+RedirectMatch 403 /ext/(.*)/config/(.*)
+RedirectMatch 403 /ext/(.*)/controller/(.*)
+RedirectMatch 403 /ext/(.*)/model/(.*)
+RedirectMatch 403 /ext/(.*)/dwoo/(.*)
+RedirectMatch 403 /ext/(.*)/locale/(.*)
+RedirectMatch 403 /ext/(.*)/test/(.*)
+RedirectMatch 403 /ext/(.*)/view/(.*)
 
 
 # Force php5 (instead 4)
